--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -101,8 +101,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - /etc/ssl/ca.ru:/etc/ssl/cargo-way-service.ru:ro
-      - ./nginx-proxy.conf:/etc/nginx/conf.d/defaulr.conf
+      - /etc/ssl/cargo-way-service.ru:/etc/ssl/cargo-way-service.ru:ro
+      - ./nginx-proxy.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app-network
 
