comment ssl_certificate

--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -8,8 +8,8 @@ server {
     listen 443 ssl;
     server_name cargo-way-service.ru;
 
-    ssl_certificate /etc/ssl/cargo-way-service.ru/cargo-way-service.crt;
-    ssl_certificate_key /etc/ssl/cargo-way-service.ru/cargo-way-service.key;
+    # ssl_certificate /etc/ssl/cargo-way-service.ru/cargo-way-service.crt;
+    # ssl_certificate_key /etc/ssl/cargo-way-service.ru/cargo-way-service.key;
 
     client_max_body_size 50M;
 
