--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -1,15 +1,6 @@
 server {
     listen 80;
     server_name cargo-way-service.ru;
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name cargo-way-service.ru;
-
-    # ssl_certificate /etc/ssl/cargo-way-service.ru/cargo-way-service.crt;
-    # ssl_certificate_key /etc/ssl/cargo-way-service.ru/cargo-way-service.key;
 
     client_max_body_size 50M;
 
@@ -31,3 +22,31 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 }
+
+# server {
+#     listen 443 ssl;
+#     server_name cargo-way-service.ru;
+
+#     ssl_certificate /etc/ssl/cargo-way-service.ru/cargo-way-service.crt;
+#     ssl_certificate_key /etc/ssl/cargo-way-service.ru/cargo-way-service.key;
+
+#     client_max_body_size 50M;
+
+#     location / {
+#         proxy_pass http://frontend:80;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection "upgrade";
+#         proxy_set_header Host $host;
+#         proxy_cache_bypass $http_upgrade;
+#     }
+
+#     location /api/v1/ {
+#         proxy_pass http://cargo-way-app:8080/;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection "upgrade";
+#         proxy_set_header Host $host;
+#         proxy_cache_bypass $http_upgrade;
+#     }
+# }
