--- a/client/cargo-way/nginx.conf
+++ b/client/cargo-way/nginx.conf
@@ -2,13 +2,19 @@ server {
     listen 80;
     server_name localhost;
 
+    root /usr/share/nginx/html;
+    index index.html;
+
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
 
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
-    add_header X-XSS-Protection "1; mode=block";
+    location /api/v1/ {
+        proxy_pass http://cargo-way-app:8080/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
 }
