--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -30,4 +30,13 @@ server {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
+
+    location /photos {
+        proxy_pass http://cargo-way-minio:9000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
 }
