--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -31,7 +31,7 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location /photos {
+    location /photos/ {
         proxy_pass http://cargo-way-minio:9000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
