add minio config

--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -31,12 +31,11 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location /photos/ {
-        proxy_pass http://cargo-way-minio:9000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+    location /web-images/ {
+        proxy_pass http://cargo-way-minio:9000/web-images/;
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
