--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,9 @@ services:
   cargo-way-minio:
     image: minio/minio:latest
     restart: unless-stopped
+    ports:
+      - "9000:9000"
+      - "9090:9090"
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
