try to fix minio

--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -32,10 +32,11 @@ server {
     }
 
     location /web-images/ {
-        proxy_pass http://cargo-way-minio:9000/web-images/;
+        proxy_pass http://cargo-way-minio:9000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 }
