--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -31,12 +31,8 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location /web-images/ {
-        proxy_pass http://cargo-way-minio:9090;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+    location /minio/ {
+        proxy_pass http://cargo-way-minio:9000/;
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
     }
 }
