--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -34,5 +34,6 @@ server {
     location /minio/ {
         proxy_pass http://cargo-way-minio:9000/;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
