--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -13,13 +13,12 @@ server {
 
     client_max_body_size 50M;
 
-    location / {
-        proxy_pass http://frontend:80;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+    location /minio/ {
+        proxy_pass http://cargo-way-minio:9000/;
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
 
     location /api/v1/ {
@@ -31,9 +30,12 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location /minio/ {
-        proxy_pass http://cargo-way-minio:9000/;
+    location / {
+        proxy_pass http://frontend:80;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_cache_bypass $http_upgrade;
     }
 }
