--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -17,8 +17,7 @@ server {
         proxy_pass http://cargo-way-minio:9000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
+        rewrite ^/minio/(.*)$ /$1 break;
     }
 
     location /api/v1/ {
